fix: shift content left 5%

--- a/src/css/Global.css
+++ b/src/css/Global.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  margin: 0 20% 0 15%;
+  margin: 0 20% 0 10%;
   line-height: 1.2;
 }
 
